PLAN10: Persistent ingest workspace, remove legacy ingest.py
Part 1 — ingest_worker.py:
- Persistent workspace (INGEST_WORKSPACE_ROOT, pass1_bundles, medlit_merged, medlit_bundle)
- Workspace helpers and fcntl-based lock for Pass 2→3→load
- No-op guard when paper_{pmcid}.json already in workspace
- Temp dir only for fetched input; Pass 1 outside lock
- Integration test in kgserver/tests/test_ingest_worker.py

Part 2 — Remove ingest.py and update docs:
- Delete examples/medlit/scripts/ingest.py
- README, CANONICAL_IDS, SIMPLIFY_PROMOTION, PLAN2–8a: three-pass pipeline canonical

Follow-up:
- ProgressTracker moved to examples/medlit/progress.py (Pydantic model)
- test_progress_tracker imports from progress; lint.sh filters to existing files only

Made-with: Cursor

--- a/STATUS_20260212.md
+++ b/STATUS_20260212.md
@@ -67,7 +67,7 @@ Record of discussion and changes from this session (help.md follow-up, evidence/
 
 ### 5.1 First full ingest run (PMC12770061)
 
-- Command: `rm -f canonical_id_cache.json && uv run python -m examples.medlit.scripts.ingest --input-dir examples/medlit/pmc_xmls/ --use-ollama --ollama-timeout 1800 --input-papers 'PMC12770061.xml' --trace-all --debug`
+- Command (at the time): legacy ingest; now use three-pass pipeline, e.g. `uv run python -m examples.medlit.scripts.pass1_extract --input-dir examples/medlit/pmc_xmls --output-dir pass1_bundles --llm-backend ollama --papers "PMC12770061.xml"` then pass2_dedup and pass3_build_bundle (see run-ingest.sh).
 - **Result:** 0 relationships. Trace showed: LLM proposed 15 relationships; all rejected — evidence enforcement (evidence_missing_subject/object, evidence_empty) and type_constraint_mismatch (e.g. disease→treats→disease). Only 4 entities (all diseases) from abstract-only extraction at that time.
 
 ### 5.2 XML / entity types
